# sem1_c_task1

./: .gitignore  .travis.yml  CMakeLists.txt  CMakeLists.txt.in  README.md  functionality.c  functionality.h  hw1.c  main.c  struct.h  test.cpp
ci/travis/: install-linux.sh
include/hw1/: err.h  io.h  numfreq.h  struct.h
src/: err.c  io.c  main.c  numfreq.c  struct.c
test/: err.cpp  struct.cpp
